[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scripts/PlayerMobile.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Hero Skeleton/Attack 5/Separate sp/attack 5 (5).png" type="Texture" id=2]
[ext_resource path="res://Animation/Player/Player_Attack.tres" type="Animation" id=3]
[ext_resource path="res://Animation/Player/Death.tres" type="Animation" id=4]
[ext_resource path="res://Animation/Player/Falling.tres" type="Animation" id=5]
[ext_resource path="res://Animation/Player/Idle.tres" type="Animation" id=6]
[ext_resource path="res://Animation/Player/Jump.tres" type="Animation" id=7]
[ext_resource path="res://Animation/Player/Player_Jump.tres" type="Animation" id=8]
[ext_resource path="res://Animation/Player/Run.tres" type="Animation" id=9]
[ext_resource path="res://Scripts/PauseMobile.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.6124, 59.4734 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 95.6491, 183.51 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=14]
size = 64
font_data = SubResource( 13 )

[sub_resource type="DynamicFontData" id=15]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=16]
size = 32
font_data = SubResource( 15 )

[sub_resource type="DynamicFontData" id=17]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=18]
size = 64
font_data = SubResource( 17 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 524288
collision_mask = 524289
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="anim" type="AnimationPlayer" parent="Sprite"]
anims/Attack = ExtResource( 3 )
anims/Death = ExtResource( 4 )
anims/Falling = ExtResource( 5 )
anims/Idle = ExtResource( 6 )
anims/Jump = ExtResource( 7 )
anims/Player_Jump = ExtResource( 8 )
anims/Run = ExtResource( 9 )

[node name="RigidBody2D" type="RigidBody2D" parent="Sprite"]
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Sprite/RigidBody2D"]
position = Vector2( 95, -38 )
scale = Vector2( 10, 1 )
shape = SubResource( 1 )

[node name="AttackArea" type="Area2D" parent="Sprite"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/AttackArea"]
position = Vector2( 95, -38 )
scale = Vector2( 10, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -9.67224, -1.93445 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="RayCasts" type="Node2D" parent="."]
editor/display_folded = true

[node name="RayCast2D" type="RayCast2D" parent="RayCasts"]
position = Vector2( 78, 180 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="RayCast2D2" type="RayCast2D" parent="RayCasts"]
position = Vector2( -97, 180 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="RayCast2D3" type="RayCast2D" parent="RayCasts"]
position = Vector2( -7, 180 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HP" type="Label" parent="HUD"]
margin_left = 31.912
margin_top = 10.9707
margin_right = 254.912
margin_bottom = 72.9707
custom_fonts/font = SubResource( 4 )
text = "sdfsdfsdf"

[node name="SCORE" type="Label" parent="HUD"]
margin_left = 793.365
margin_top = 19.2726
margin_right = 954.365
margin_bottom = 78.2726
custom_fonts/font = SubResource( 6 )

[node name="Pause" type="ColorRect" parent="HUD"]
pause_mode = 2
visible = false
self_modulate = Color( 0.0117647, 0.0705882, 0.164706, 0.282353 )
margin_left = 312.4
margin_top = 92.4502
margin_right = 692.4
margin_bottom = 472.45
script = ExtResource( 10 )

[node name="Resume" type="Button" parent="HUD/Pause"]
margin_left = 77.9495
margin_top = 114.604
margin_right = 297.949
margin_bottom = 159.604
custom_fonts/font = SubResource( 8 )
text = "Continue"

[node name="Menu" type="Button" parent="HUD/Pause"]
margin_left = 77.9495
margin_top = 207.481
margin_right = 297.949
margin_bottom = 252.481
custom_fonts/font = SubResource( 10 )
text = "Main menu"

[node name="Exit" type="Button" parent="HUD/Pause"]
margin_left = 77.9495
margin_top = 290.758
margin_right = 297.949
margin_bottom = 335.758
custom_fonts/font = SubResource( 12 )
text = "Exit"

[node name="Label" type="Label" parent="HUD/Pause"]
modulate = Color( 1, 1, 1, 0.658824 )
margin_left = 40.0
margin_top = 10.0
margin_right = 340.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 14 )
text = "PAUSED"

[node name="PauseButton" type="Button" parent="HUD"]
self_modulate = Color( 1, 1, 1, 0.729412 )
margin_left = 463.85
margin_top = 17.6013
margin_right = 579.85
margin_bottom = 62.6013
custom_fonts/font = SubResource( 16 )
text = "Pause"

[node name="Left" type="Button" parent="HUD"]
margin_left = 21.2002
margin_top = 495.0
margin_right = 169.2
margin_bottom = 579.0
custom_fonts/font = SubResource( 18 )
text = "Left"

[node name="Right" type="Button" parent="HUD"]
margin_left = 259.354
margin_top = 495.0
margin_right = 447.354
margin_bottom = 579.0
custom_fonts/font = SubResource( 18 )
text = "Right"

[node name="Jump" type="Button" parent="HUD"]
margin_left = 752.656
margin_top = 495.0
margin_right = 956.656
margin_bottom = 579.0
custom_fonts/font = SubResource( 18 )
text = "Jump"

[node name="Interapt" type="Button" parent="HUD"]
margin_left = 550.0
margin_top = 495.0
margin_right = 650.0
margin_bottom = 579.0
custom_fonts/font = SubResource( 18 )
text = "e"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="body_entered" from="Sprite/RigidBody2D" to="." method="_on_RigidBody2D_body_entered"]
[connection signal="body_entered" from="Sprite/AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="pressed" from="HUD/Pause/Resume" to="HUD/Pause" method="_on_Resume_pressed"]
[connection signal="pressed" from="HUD/Pause/Menu" to="HUD/Pause" method="_on_Menu_pressed"]
[connection signal="pressed" from="HUD/Pause/Exit" to="HUD/Pause" method="_on_Exit_pressed"]
[connection signal="pressed" from="HUD/PauseButton" to="HUD/Pause" method="_on_PauseButton_pressed"]
[connection signal="button_down" from="HUD/Left" to="." method="_on_Left_button_down"]
[connection signal="button_up" from="HUD/Left" to="." method="_on_Left_button_up"]
[connection signal="button_down" from="HUD/Right" to="." method="_on_Right_button_down"]
[connection signal="button_up" from="HUD/Right" to="." method="_on_Right_button_up"]
[connection signal="button_down" from="HUD/Jump" to="." method="_on_Jump_button_down"]
[connection signal="button_up" from="HUD/Jump" to="." method="_on_Jump_button_up"]
[connection signal="button_down" from="HUD/Interapt" to="." method="_on_Interapt_button_down"]
[connection signal="button_up" from="HUD/Interapt" to="." method="_on_Interapt_button_up"]
